--- a/resume.css
+++ b/resume.css
@@ -23,8 +23,8 @@ h3{
 }
 
 h4{
-	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 400;
+	font-family: 'Oswald', sans-serif;
+	font-weight: 300;
 	font-size: 15pt;
 }
 
@@ -47,16 +47,16 @@ span{
 }
 
 .text {
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto Condensed', sans-serif;
 	font-weight: 300;
-	font-size:12pt;
+	font-size:13pt;
 	display:block;
 }
 
 .bold-text {
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto Condensed', sans-serif;
 	font-weight: 400;
-	font-size:12pt;
+	font-size:13pt;
 	display:block;
 }
 
@@ -72,8 +72,8 @@ span{
 
 .bar-text{
 	color: #ffffff;
-	font-family: 'Roboto', sans-serif;
-	font-weight: 400;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: 700;
 	font-size:11pt;
 	display: block;
 	padding-top: 2px;
@@ -96,7 +96,7 @@ span{
 }
 
 .large-top-margin{
-	margin-top:55px;
+	margin-top:45px;
 }
 
 .header{
