--- a/resume.css
+++ b/resume.css
@@ -112,3 +112,66 @@ span{
 .page{
 	margin-top:10px;
 }
+
+@media print{
+		h1{
+			font-size: 42pt;
+		}
+		
+		h2{
+			font-size: 18pt;
+		}
+
+		h3{
+			font-size: 18pt;
+			margin-top: 10px;
+		}
+
+		h4{
+			font-size: 13pt;
+		}
+
+		h5{
+			font-size: 12pt;
+		}
+
+		h6{
+			font-size: 10pt;
+			margin-top: 0px;
+			margin-bottom: 19px;
+		}
+
+		.page{
+			margin-top: 30px;
+		}
+
+		.header{
+			padding-top: 0px;
+		}
+
+		.text{
+			font-size: 9pt;
+		}
+
+		.bold-text{
+			font-size: 9pt;
+		}
+
+		.bar-text{
+			font-size:8pt;
+			font-weight: 300;
+			color: #aeaeae !important;
+      -webkit-print-color-adjust: exact;
+		}
+
+		.bar{
+			height:18px;
+			border: 1px solid #aeaeae;
+			margin-top: 2px;
+		}
+
+		.large-top-margin{
+			margin-top: 35px;
+		}
+
+	}
